@@ -3,6 +3,7 @@ h1. CHANGELOG
 h2. 2.4.7 unreleased
 
 * fix Compass for using Foundation on Rails 4 (contributed by Mathias)
+* eliminate Devise Invitable module as an option for Rails 4 (closes #243)
 
 h2. 2.4.6 August 25, 2013
 
